syntax = "proto3";

package go.micro.srv.policy;

service Example {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
}

message CreateRequest {
  string created = 1;
  string created_by = 2;
  string filter = 3;
  string filter_raw = 4;
  bool is_archive_policy = 5;
  bool is_deletion_policy = 6;
  string name = 7;
}

message CreateResponse {

}

message ReadRequest {
  string name = 1;
}

message ReadResponse {
  string created = 1;
  string created_by = 2;
  string filter = 3;
  string filter_raw = 4;
  bool is_archive_policy = 5;
  bool is_deletion_policy = 6;
  string name = 7;
}

message DeleteRequest {
  string name = 8;
}

message DeleteResponse {

}

message ListRequest {

}

message ListResponse {
  repeated ReadResponse result = 1;
}
